# module-6-isnendyankp

./: README.md
flaskzooapi/: .coverage  .env  .gitignore  pyproject.toml
flaskzooapi/app/: __init__.py
flaskzooapi/app/models/: animal.py  customer.py  customers.py  employee.py
flaskzooapi/app/route/: animal_route.py  customer_route.py  employee_route.py  pokemon_route.py
flaskzooapi/tests/: test_animal_model.py  test_app.py  test_employee_model.py
