[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["isnendyankp <isnendyankp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.5"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
pytest = "^8.0.1"
pytest-coverage = "^0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
